--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 <center>
-  	<h3>AI DJ WEB APP
+  	<h3 class = "btn btn-warning heading">AI DJ WEB APP
 	    <br>
-	    <span>NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
+	    <span class= "note" >NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
         Move your right-hand wrist up and down for increasing and decreasing the speed</span>
   	</h3>
 	<br><br>
